--- a/lab 6/assets/css/style.css
+++ b/lab 6/assets/css/style.css
@@ -695,7 +695,7 @@ h3.counter.counter-lg {
         height:auto;
         margin-bottom: 0;
         margin-top: 0;
-        flex-direction: row;
+        flex-direction: column;
         gap: 20px;
         align-items: center;
     }
